# nibbler

./: .gitignore  CMakeLists.txt  README.md
lib/NCURSES/: ncursesLib.cpp  ncursesLib.hpp
lib/SDL/: sdlLib.cpp  sdlLib.hpp
lib/SFML/: sfmlLib.cpp  sfmlLib.hpp
src/: Drawable.cpp  Drawable.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  LibInterface.hpp  Snake.cpp  Snake.hpp  SnakeBody.cpp  SnakeBody.hpp  SnakeHead.cpp  SnakeHead.hpp  graphicsInterface.hpp  main.cpp  sfmlLib.cpp  sfmlLib.hpp  snake.cpp  snake.hpp
